fixed nav links on mobile

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -50,7 +50,7 @@ nav {
   padding:0;
   text-decoration: none;
   text-align: center;
-  gap:2rem;
+  gap:1.5rem;
 }
 
 .nav-links ul {
